--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,13 @@
 ---
 
+### RedHat - Add Repo
 - name: Add atomic repository
   template: src=atomic.repo.j2
             dest=/etc/yum.repos.d/atomic.repo
             owner=root
             group=root
             mode=0644
+  when: ansible_os_family == 'RedHat'
 
 # https://www.atomicorp.com/RPM-GPG-KEY.art.txt
 - name: Add atomic GPG key
@@ -14,12 +16,36 @@
         owner=root 
         group=root 
         mode=0644
-        
+  when: ansible_os_family == 'RedHat'
+
+### Debian - Add Repo
+- name: Install python-apt, a requirement for apt_repository
+  apt:  name=python-apt state=latest
+  when: ansible_of_family == 'Debian'
+
+- name: Add alienvault GPG key
+  apt_key: url='http://ossec.alienvault.com/repos/apt/conf/ossec-key.gpg.key' state=present
+  when: ansible_of_family == 'Debian'
+
+- name: Add alienvault apt repository
+  apt_repository: repo='deb http://ossec.alienvault.com/repos/apt/debian wheezy main' state=present
+  when: ansible_of_family == 'Debian'
+
+### RedHat - Install ossec agent
 - name: Install ossec agent
   yum: name=ossec-hids-client state=installed
   notify:
     - Register client
-  
+  when: ansible_os_family == 'RedHat'
+
+### RedHat - Install ossec agent
+- name: Install ossec agent
+  apt: name=ossec-hids-agent state=installed
+  notify:
+    - Register client
+  when: ansible_os_family == 'Debian'
+
+### Configure OSSEC
 - name: Set ossec client config
   template: src=ossec-agent.conf.j2 dest=/var/ossec/etc/ossec-agent.conf 
   notify:
